<resources>
    <string name="app_name">Receptų Knyga</string>
    <string name="home_screen">Visi receptai</string>
    <string name="new_recipe">Naujas receptas</string>
    <string name="search_recipe">Ieškoti pagal pavadinimą</string>
    <string name="add_recipe">Naujas receptas</string>
    <string name="title">Pavadinimas</string>
    <string name="rating">Įvertinimas</string>
    <string name="category">Kategorija</string>
    <string name="preparation">Ruošimo laikas</string>
    <string name="cooking">Gaminimo laikas</string>
    <string name="total">Bendras laikas</string>
    <string name="yield">Porcijos</string>
    <string name="ingredients">Ingredientai</string>
    <string name="directions">Eiga</string>
    <string name="comments">Komentarai</string>
    <string name="source">Šaltinis</string>
    <string name="save_button">Išsaugoti</string>
    <string name="hour">val.</string>
    <string name="minute">min.</string>
    <string name="vnt">vnt</string>
    <string name="modify">Redaguoti</string>
    <string name="delete">Ištrinti</string>
    <string name="metricSystem">Metrinė matavimo sistema</string>
    <string name="usSystem">JAV matavimo sistema</string>
    <string name="search">Ieškoti</string>
    <string name="measurement_system">Matavimo sistema</string>
    <string name="piece">Vnt.</string>
    <string name="shape">kepimo forma</string>
    <string name="from_to">Perskaičiuoti ingredientus:</string>
    <string name="diameter">Skersmuo</string>
    <string name="height">Aukštis</string>
    <string name="length">Ilgis</string>
    <string name="breadth">Plotis</string>
    <string name="category_search">Ieškoti pagal kategoriją</string>
    <string name="ingredient_search">Ieškoti pagal ingredientą</string>
<string name="diameter_text">Skersmuo:</string>
    <string name="height_text">Aukštis:</string>
    <string name="breadth_text">Plotis:</string>
    <string name="length_text">Ilgis:</string>
    <string name="no_result">Rezultatų nėra</string>
    <string-array name="categories">
        <item>Užkandžiai</item>
        <item>Pagrindiniai patiekalai</item>
        <item>Salotos</item>
        <item>Sriubos</item>
        <item>Desertai</item>
        <item>Gėrimai</item>
    </string-array>
   <string-array name="pan">
       <item>Apvali forma</item>
       <item>Kvadratinė forma</item>
   </string-array>

</resources>
