<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#FFFFFF">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeId"
            android:icon="@drawable/ic_home"
            android:onClick="onOptionsItemSelected"
            android:title="@string/home_screen" />
        <item
            android:id="@+id/addRecipeId"
            android:icon="@drawable/ic_add"
            android:onClick="onOptionsItemSelected"
            android:title="@string/new_recipe" />
        <item
            android:id="@+id/search"
            android:icon="@drawable/ic_search"
            android:onClick="onOptionsItemSelected"
            android:title="@string/search_recipe" />
        <item
            android:id="@+id/categorySearch"
            android:icon="@drawable/ic_search"
            android:onClick="onOptionsItemSelected"
            android:title="@string/category_search" />
        <item
            android:id="@+id/ingredientSearch"
            android:icon="@drawable/ic_search"
            android:onClick="onOptionsItemSelected"
            android:title="@string/ingredient_search" />
    </group>
</menu>