<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbarSize="5dp"
    android:scrollbarThumbVertical="@color/colorPrimaryDark">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/main_fragment_photo"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corners"
                android:elevation="3dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="5dp" />

            <TextView
                android:id="@+id/main_fragment_recipe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_fragment_photo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corners"
                android:elevation="3dp"
                android:textAlignment="center"
                android:textColor="#6E6E6E"
                android:textSize="30sp"
                android:textAllCaps="true"/>

            <LinearLayout
                android:id="@+id/main_fragment_rating_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_fragment_recipe_name"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corners"
                android:elevation="3dp"
                android:gravity="center_horizontal">

                <RatingBar
                    android:id="@+id/main_fragment_rating"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:isIndicator="true"
                    android:paddingStart="7dp"
                    android:paddingTop="5dp"
                    android:paddingEnd="7dp"
                    android:paddingBottom="5dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/cooking_preparation_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_fragment_rating_layout"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/main_fragment_preparation_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corners"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <TextView
                        android:id="@+id/main_fragment_preparation_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/preparation"
                        android:textAlignment="center"
                        android:textColor="#6E6E6E"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="1dp">

                        <TextView
                            android:id="@+id/main_fragment_preparation_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/main_fragment_hour_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/hour"
                            android:textColor="#6E6E6E"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/main_fragment_preparation_minute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/minute"
                            android:textColor="#6E6E6E"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corners"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <TextView
                        android:id="@+id/main_fragment_cooking_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/cooking"
                        android:textAlignment="center"
                        android:textColor="#6E6E6E"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="1dp">

                        <TextView
                            android:id="@+id/main_fragment_cooking_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/main_fragment_cooking_hour_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/minute"
                            android:textColor="#6E6E6E"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/main_fragment_cooking_minute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/hour"
                            android:textColor="#6E6E6E"
                            android:textSize="15sp" />
                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/round_corners"
                    android:elevation="3dp"
                    android:orientation="vertical"
                    android:padding="1dp">

                    <TextView
                        android:id="@+id/main_fragment_total_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/total"
                        android:textAlignment="center"
                        android:textColor="#6E6E6E"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="1dp">

                        <TextView
                            android:id="@+id/main_fragment_total_hour"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/main_fragment_total_hour_text"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/hour"
                            android:textColor="#6E6E6E"
                            android:textSize="15sp" />

                        <TextView
                            android:id="@+id/main_fragment_total_minute"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/minute"
                            android:textColor="#6E6E6E"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_fragment_category_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/cooking_preparation_layout"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corners"
                android:elevation="3dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/category"
                    android:textColor="#6E6E6E"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_fragment_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/category"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_fragment_comment_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_fragment_category_layout"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corners"
                android:elevation="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_fragment_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/comments"
                    android:textColor="#6E6E6E"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_fragment_comment_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/main_fragment_comment_layout"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corners"
                android:elevation="3dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_fragment_source_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:text="@string/source"
                    android:textColor="#6E6E6E"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_fragment_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textIsSelectable="true"
                    android:textSize="15sp"
                    android:autoLink="web"/>
            </LinearLayout>
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>